--- a/doc/Fast_and_Extensible_Equality_Saturation_zh_cn/01-intro.tex
+++ b/doc/Fast_and_Extensible_Equality_Saturation_zh_cn/01-intro.tex
@@ -50,14 +50,14 @@
   它们使用一种被称为 \textit{等式饱和}~\cite{
     denali, eqsat, eqsat-llvm, szalinski, yogo-pldi20, spores, herbie} 的技术。
 给定一个输入程序 $p$ ，
-   等式饱和 构建了一个 $E$ 图，它代表了一大批与之等价的程序。
-  代表与 $p$ 等价的一大组程序。然后从 $E$ 中提取 "最好的 "程序。
-该图增长是通过反复应用基于模式的重写。
-最重要的是，这些改写只向 \egraph 增加信息。消除了对仔细排序的需要。
+  等式饱和 构建了一个 $E$ 图，它
+  代表与 $p$ 等价的一大组程序，然后可以从 $E$ 中提取 "最好的 "程序。
+\egraph 的增长是通过反复应用基于模式的重写。
+最重要的是，这些改写只向 \egraph 增加信息。不需要仔细排序。
 在达到一个不动点（\textit{饱和}）时，
   $E$ 将代表 \textit{所有等价的方式} 来表达表达 $p$ 与给定重写的关系。
 饱和（或超时）之后，最后的 \textit{萃取} （extraction）程序
-  将分析 $E$ 并选择根据用户提供的成本函数，选择最佳程序。
+  将分析 $E$ 并根据用户提供的成本函数，选择最佳程序。
 
 
 % Ideally, a user could simply provide
