--- a/doc/Fast_and_Extensible_Equality_Saturation_zh_cn/05-impl.tex
+++ b/doc/Fast_and_Extensible_Equality_Saturation_zh_cn/05-impl.tex
@@ -118,8 +118,8 @@
 % More complex rewrites can incorporate conditions or even dynamic right-hand
 %   sides, both explained in the \autoref{sec:egg-extensible} and \autoref{fig:lambda-applier}.
 用户可以提供重写规则，见 \autoref{fig:lambda-lang}，行 51-100 。
-每个重写规则都有一个名称,一个左部和一个右部.
-对于纯语法重写,右部仅仅是一个模式.
+每个重写规则都有一个名称，一个左部和一个右部。
+对于纯语法重写，右部仅仅是一个模式。
 更复杂的重写可以包含条件甚至是动态的右部，
   这些在 \autoref{sec:egg-extensible} 和 \autoref{fig:lambda-applier} 中有解释。
 
