--- a/doc/Fast_and_Extensible_Equality_Saturation_zh_cn/10-conclusion.tex
+++ b/doc/Fast_and_Extensible_Equality_Saturation_zh_cn/10-conclusion.tex
@@ -17,7 +17,7 @@
 %   %interpretation to the \egraph level,
 %   allowing for interpreted reasoning
 %   beyond what purely syntactic rewrites can provide.
-我们提出了两种新技术，重建和 \eclass 分析，
+我们提出了两种新技术：重建和 \eclass 分析，
   使得 等式饱和 变快且足够可扩展，可用于一类新的应用程序。
 重建是一种新的方法，用于摊销维护 \egraph 数据结构不变性的成本，
   将 \egraph 针对 等式饱和 工作量来特化。 % ？
