--- a/doc/Fast_and_Extensible_Equality_Saturation_zh_cn/92-lambda-code.tex
+++ b/doc/Fast_and_Extensible_Equality_Saturation_zh_cn/92-lambda-code.tex
@@ -1,4 +1,4 @@
-% 翻译完成；代码注释未翻译
+% 翻译完成
 \begin{figure}
 \begin{minipage}[t]{0.49\linewidth}
   \begin{lstlisting}[language=Rust, basicstyle=\tiny\ttfamily, numbers=left]
